--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "@shopify/flash-list": "^1.6.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.5",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.0.0",
+    "react-native-stars": "^1.2.2",
+    "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
