--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^10.1.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/native": "^6.1.14",
@@ -21,9 +23,13 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0"
