--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-google-signin/google-signin": "^10.1.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
@@ -17,6 +18,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@shopify/flash-list": "^1.6.4",
+    "date-fns": "^3.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.5",
