--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@shopify/flash-list": "^1.6.4",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.12.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "^4.9.0",
@@ -34,7 +36,8 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^15.1.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg-transformer": "^1.3.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
