--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-native": "0.73.5",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-fast-image": "^8.6.3",
@@ -37,6 +38,7 @@
     "react-native-stars": "^1.2.2",
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-system-navigation-bar": "^2.6.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
